--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,9 @@
         "__functional_base_03": "cpp",
         "__tuple": "cpp",
         "compare": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "cstring": "cpp",
+        "__config": "cpp"
     },
     "gtest-adapter.debugConfig": "GTest",
     "gtest-adapter.supportLocation": true,
